--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -275,3 +275,13 @@ Packages:
       - Updated localizations
       - Disabled RetroAchievements
       - Fixed minor issues and crash
+  - Version: 3.1.4
+    RequiredApiVersion: 6.10.0
+    ReleaseDate: 2023-10-25
+    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v3.1.4/playnite-successstory-plugin_3_1_4.pext
+    Changelog:
+      - Updated localizations
+      - Fixed settings from RetroAchievements
+      - Externalised Steam
+      - Fixed WOW settings
+      - Fixed minor issues and crash
