--- a/manifest/Lacro59_SuccessStory.yaml
+++ b/manifest/Lacro59_SuccessStory.yaml
@@ -302,3 +302,11 @@ Packages:
       - Fixed RetroAchievements
       - Fixed Steam
       - Fixed Steam (thanks to damirarh & Kryeker)
+  - Version: 3.1.7
+    RequiredApiVersion: 6.10.0
+    ReleaseDate: 2024-01-08
+    PackageUrl: https://github.com/Lacro59/playnite-successstory-plugin/releases/download/v3.1.7/playnite-successstory-plugin_3_1_7.pext
+    Changelog:
+      - Updated RetroAchievements api
+      - Fixed Steam
+      - Fixed Steam date unlocked with web parsing (thanks to Kryeker)
