fixed bad platform association with RA

--- a/source/SuccessStory.csproj
+++ b/source/SuccessStory.csproj
@@ -156,6 +156,10 @@
     </Compile>
     <Compile Include="Converters\Crc32.cs" />
     <Compile Include="Converters\SetColorConverter.cs" />
+    <Compile Include="Models\RetroAchievements\RaConsole.cs" />
+    <Compile Include="Models\RetroAchievements\RaGame.cs" />
+    <Compile Include="Models\RetroAchievements\RaMd5List.cs" />
+    <Compile Include="Models\RetroAchievements\RaPlatformType.cs" />
     <Compile Include="playnite-plugincommon\CommonPluginsControls\Controls\ComboBoxRemovable.xaml.cs">
       <DependentUpon>ComboBoxRemovable.xaml</DependentUpon>
     </Compile>
@@ -535,7 +539,7 @@
     <Compile Include="Models\GameAchievements.cs" />
     <Compile Include="Models\PSN_NPWR_LIST.cs" />
     <Compile Include="Models\QuickSearchItemSource.cs" />
-    <Compile Include="Models\RaConsoleAssociated.cs" />
+    <Compile Include="Models\RetroAchievements\RaConsoleAssociated.cs" />
     <Compile Include="Models\SearchResult.cs" />
     <Compile Include="Models\SuccessStoryCollection.cs" />
     <Compile Include="Models\Wow\WowAchievementsData.cs" />
