--- a/source/SuccessStory.csproj
+++ b/source/SuccessStory.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Converters\Crc32.cs" />
     <Compile Include="Converters\SetColorConverter.cs" />
     <Compile Include="Models\GenshinImpact\PaimonMoeAchievements.cs" />
+    <Compile Include="Models\PSN\TropyTitlesResponse.cs" />
     <Compile Include="Models\RetroAchievements\RaConsole.cs" />
     <Compile Include="Models\RetroAchievements\RaGame.cs" />
     <Compile Include="Models\RetroAchievements\RaMd5List.cs" />
@@ -538,7 +539,7 @@
     <Compile Include="Models\ListGames.cs" />
     <Compile Include="Models\ProgressionAchievements.cs" />
     <Compile Include="Models\GameAchievements.cs" />
-    <Compile Include="Models\PSN_NPWR_LIST.cs" />
+    <Compile Include="Models\PSN\PSN_NPWR_LIST.cs" />
     <Compile Include="Models\QuickSearchItemSource.cs" />
     <Compile Include="Models\RetroAchievements\RaConsoleAssociated.cs" />
     <Compile Include="Models\SearchResult.cs" />
