--- a/source/SuccessStory.csproj
+++ b/source/SuccessStory.csproj
@@ -166,6 +166,9 @@
     <Compile Include="Models\RetroAchievements\RaMd5List.cs" />
     <Compile Include="Models\RetroAchievements\RaPlatformType.cs" />
     <Compile Include="Models\BattleNetSc2User.cs" />
+    <Compile Include="Models\Stats\AchievementsGraphicsDataCount.cs" />
+    <Compile Include="Models\Stats\AchievementsGraphicsDataCountSources.cs" />
+    <Compile Include="Models\Stats\AchievementsGraphicsDataSources.cs" />
     <Compile Include="Models\Xbox\Xbox360Achievement.cs" />
     <Compile Include="Models\Xbox\XboxOneAchievement.cs" />
     <Compile Include="playnite-plugincommon\CommonPluginsControls\Controls\ComboBoxRemovable.xaml.cs">
@@ -220,6 +223,7 @@
     <Compile Include="Services\NDS.cs" />
     <Compile Include="Services\SuccessStoryDatabase.cs" />
     <Compile Include="Services\SuccessStorySearch.cs" />
+    <Compile Include="Services\SuccessStoryStats.cs" />
     <Compile Include="Services\SuccessStoryTopPanelItem.cs" />
     <Compile Include="Services\SuccessStoryViewRaSidebar.cs" />
     <Compile Include="Services\SucessStoryViewSidebar.cs" />
@@ -552,7 +556,6 @@
     <Compile Include="Models\GuildWars2\GW2Achievements.cs" />
     <Compile Include="Models\GuildWars2\GW2AchievementsGroups.cs" />
     <Compile Include="Models\GuildWars2\GW2OwnedAchievements.cs" />
-    <Compile Include="Models\ListAchievements.cs" />
     <Compile Include="Models\ListAll.cs" />
     <Compile Include="Models\ListGames.cs" />
     <Compile Include="Models\ProgressionAchievements.cs" />
