--- a/source/SuccessStory.csproj
+++ b/source/SuccessStory.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Converters\Crc32.cs" />
     <Compile Include="Converters\SetColorConverter.cs" />
     <Compile Include="Models\GenshinImpact\PaimonMoeAchievements.cs" />
+    <Compile Include="Models\GenshinImpact\PaimonMoeLocalData.cs" />
+    <Compile Include="Models\GenshinImpact\SeelieMeLocalData.cs" />
     <Compile Include="Models\PSN\TropyTitlesResponse.cs" />
     <Compile Include="Models\RetroAchievements\RaConsole.cs" />
     <Compile Include="Models\RetroAchievements\RaGame.cs" />
